chrome-pwr.css
@font-face {
    font-family: '8BIT WONDER';
    src: url('./font/8bitwonder.ttf') format('truetype');
}

* {
    font-family: '8BIT WONDER', sans-serif;
    color: white;
    user-select: none;
}

html {
    height: 0;
}

body {
    width: 300px;
    margin: 5px;
    background-color: #222222;
}

a {
    text-decoration: none;
}

h1, h2, h3, h4, h5, h6 {
    text-align: center;
}

button {
    cursor: pointer;
    height: 30px;
    border-radius: 5px;
    outline: 2px solid #ff3d84;
    background-color: #222222;
    transition: all 0.1s ease;
    font-size: 12px;
}

button:hover {
    transform: scale(0.95);
}

button.wide {
    grid-column: span 2;
}

button.thin {
    height: 20px;
}

input[type='checkbox'] {
    accent-color: #ff3d84;
    transition: all 0.1s ease;
}

input[type='checkbox']:hover {
    transform: scale(1.20);
}

input[type='radio'] {
    cursor: pointer;
    appearance: none;
    margin: 0;
    border: 10px solid #545454;
    box-shadow: 0px 0px 0px 3px white;
    border-radius: 15%;
    transition: all 0.1s ease;
}

input[type='radio']:hover {
    transform: scale(1.20);
}

input[type='radio']:checked {
    border-color: #ff3d84;
}

input[type='range'] {
    appearance: none;
    height: 30px;
    background-color: #545454;
    border-radius: 5px;
}

input[type='range']::-webkit-slider-thumb {
    appearance: none;
    width: 28px;
    height: 28px;
    background: #ff3d84;
    cursor: pointer;
    border-radius: 15%;
    box-shadow: inset 0px 0px 0px 3px white;
    transition: all 0.1s ease;
}

input[type='range']:hover::-webkit-slider-thumb {
    transform: scale(1.20);
}

.hidden {
    display: none;
}

.grid {
    display: grid;
    grid-template-columns: 145px 145px;
    grid-template-rows: auto;
    row-gap: 8px;
    column-gap: 10px;
}

.grid p {
    margin: 0;
}

.grid3 {
    display: grid;
    grid-template-columns: 54px 113px 113px;
    grid-template-rows: auto;
    row-gap: 8px;
    column-gap: 10px;
}

.pb {
    padding-bottom: 8px;
}

.mb {
    margin-bottom: 8px;
}

.radio-and-label-container {
    padding: 3px 0;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.radio-and-label-container label {
    /* 54px from grid3 = 24px icon + 10px gap + 20px radio */
    width: 34px;
}

.bar {
    width: 300px;
    height: 32px;
    padding-bottom: 2px;
    margin-bottom: 2px;
    text-align: center;
    background: #ff3d84;
    color: white;
    letter-spacing: -3px;
    text-shadow: 3px 3px #aaaaaa;
    border-radius: 32px;
    font-size: 26px;
}

#foldable-controls {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}

#macro-recorder-delay-display {
    margin: 0;
}

